# jump

./: Cargo.toml  TODO.md
src/: app.rs  cli.rs  lib.rs  main.rs  materializer.rs  symbol.rs
src/lsp/: client.rs
src/symbol/: extractor.rs  formatter.rs
tests/: integration_nvim.rs  integration_tmux.rs
