[package]
name = "jump"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lsp-types = "0.97"
async-lsp = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.19", default-features = false }
ignore = "0.4"
toml = "0.8"
dirs = "5.0"
tmux_interface = "0.3.2"
regex = "1"
libc = "0.2"
once_cell = "1.19"
notify-rust = "4"

[dev-dependencies]
tempfile = "3.10"

[patch.crates-io]
waitpid-any = { path = "vendor/waitpid-any" }
